# server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Account/: Account.cpp  Account.h  ContactInformation.cpp  ContactInformation.h  CustomerAccount.cpp  CustomerAccount.h  MerchantAccount.cpp  MerchantAccount.h  MerchantService.cpp  MerchantServiceType.cpp  MerchantServiceType.h
Configuration/: Configure.cpp  Configure.h
DataSource/: DataAccess.cpp  DataAccess.h  DataSource.cpp  DataSource.hpp
DataSource/Postgres/: PostgresConnection.cpp  PostgresConnection.h
Errors/: AccountAlreadyExistError.cpp  AccountAlreadyExistError.h  AccountAlreadyExistError.hpp  DatabaseInternalError.cpp  DatabaseInternalError.h  NoSuchAnAccount.cpp  NoSuchAnAccount.h  NoSuchAnAccountError.cpp  NoSuchAnAccountError.h  NoSuchAnAccountError.hpp  NoSuchAnAccountOrPasswordNotRightError.hpp  OrderNotAtRightState.cpp  OrderNotAtRightState.h  OrderNotAtRightState.hpp  PasswordNotRight.cpp  PasswordNotRight.h  PasswordNotRightError.cpp  PasswordNotRightError.h  PasswordNotRightError.hpp  QueryResultEmptyError.cpp  QueryResultEmptyError.h  ResultEmpty.cpp  ResultEmpty.h
Factories/: AccountFactory.cpp  AccountFactory.h  CustomerFactory.cpp  CustomerFactory.h  DataAccessFactory.cpp  DataAccessFactory.h  MerchantFactory.cpp  MerchantFactory.h  OrderFactory.cpp  OrderFactory.h  OrderFactory.hpp  UserFactory.hpp
Factories/DataSource/: DataSource.hpp  OrderStateParameters.h
Factories/DataSource/MariaDB/: DatabaseConnection.cpp  DatabaseConnection.h  MariaDBConnection.h  QueryResult.cpp  QueryResult.h
Factories/DataSource/Postgres/: PostgresConnection.cpp  PostgresConnection.h
Factories/DataSource/SimulateDatabase/: SimulateDatabase.cpp  SimulateDatabase.h
Factories/Database/: DatabaseConnection.cpp  DatabaseConnection.h  DatabaseConnection.hpp  OrderStateParameters.h  QueryResult.cpp  QueryResult.h
Factories/OrderStateFactories/: OrderEndRepairStateFactory.cpp  OrderEndRepairStateFactory.h  OrderFinishedStateFactory.cpp  OrderFinishedStateFactory.h  OrderReceivedStateFactory.cpp  OrderReceivedStateFactory.h  OrderRejectedStateFactory.cpp  OrderRejectedStateFactory.h  OrderStartRepairStateFactory.cpp  OrderStartRepairStateFactory.h  OrderStateAbstractFactory.cpp  OrderStateAbstractFactory.h  OrderUnreceivedStateFactory.cpp  OrderUnreceivedStateFactory.h
ManagerProxy/: AccountManagerProxy.cpp  AccountManagerProxy.h  InstructionsAnalyser.cpp  InstructionsAnalyser.h  OrderManagerProxy.cpp  OrderManagerProxy.h  TokenManagerProxy.cpp  TokenManagerProxy.h
ManagerProxy/AuthenticationCarrier/: AuthenticationCarrier.cpp  AuthenticationCarrier.h  AuthenticationSaver.cpp  AuthenticationSaver.h  AuthenticationToScreen.cpp  AuthenticationToScreen.h
ManagerProxy/Managers/: AccountManager.cpp  AccountManager.h  OrderManager.cpp  OrderManager.h
ManagerProxy/Subjects/:  TokenManagerSubject.cpp  AccountManagerSubject.cpp  AccountManagerSubject.h  OrderManagerSubject.cpp  OrderManagerSubject.h  TokenManagerSubject.h
ManagerProxy/Subjects/Managers/: AccountManager.cpp  AccountManager.h  OrderManager.cpp  OrderManager.h  TokenManager.cpp  TokenManager.h
Managers/: AccountManager.cpp  AccountManager.h  AccountManager.hpp  InstructionsAnalyser.cpp  InstructionsAnalyser.h  OrderManager.cpp  OrderManager.h
Managers/AuthenticationCarrier/: AuthenticationToScreen.cpp
Network/: jsonAnalyser.h  networkconnection.cpp
Order/: Order.cpp  Order.h
Order/OrderStates/: AcceptableOrderPriceRange.cpp  OrderEndRepairState.cpp  OrderEndRepairState.h  OrderEvaluate.cpp  OrderFinishedState.cpp  OrderFinishedState.h  OrderReceivedState.cpp  OrderReceivedState.h  OrderRejectedState.cpp  OrderRejectedState.h  OrderStartRepairState.cpp  OrderStartRepairState.h  OrderState.cpp  OrderState.h  OrderUnreceivedState.cpp  OrderUnreceivedState.h
RestServer/: RequestInterpreter.cpp  RespondGenerator.cpp  RespondGenerator.h  RestHandler.cpp  RestHandler.h
TestCases/: FactoryTest.cpp  OrderProcessTest.cpp
TestCases/pytest/: accounts.json  main.py  test_customer.py  test_merchant.py  test_public.py
TestCases/pytest/Connect/: Connection.py  Host.py
TestCases/pytest/Database/: Postgres.py
TestCases/pytest/Entities/: Account.py  Coordinate.py  Order.py  Token.py
Token/: Token.cpp  Token.h
control/order/: ordermanagesystem.cpp
control/user/: accountonlinemanager.cpp  accountregistermanager.cpp  usermanagesystem.cpp
database/: databaseconnection.cpp
network/: jsonAnalyser.cpp
protos/: QuickRepair.proto
src/ApplicationServer/: CMakeLists.txt  main.cpp  types.h
src/ApplicationServer/Account/: Account.cpp  Account.h  MerchantService.cpp  MerchantService.h
src/ApplicationServer/Configuration/: Configure.cpp  Configure.h
src/ApplicationServer/DataSource/: DataAccess.cpp  DataAccess.h  DataSource.cpp  DataSource.hpp
src/ApplicationServer/Errors/: AccountAlreadyExistError.hpp  DatabaseInternalError.hpp  InitError.hpp  NoAuthenticationCarrierFound.hpp  QueryResultEmptyError.hpp
src/ApplicationServer/Factories/: AccountFactory.cpp  AccountFactory.h  DataAccessFactory.cpp  DataAccessFactory.h  OrderFactory.cpp  OrderFactory.hpp
src/ApplicationServer/ManagerProxy/: AccountManagerProxy.cpp  AccountManagerProxy.h  OrderManagerProxy.cpp  OrderManagerProxy.h  TokenManagerProxy.cpp  TokenManagerProxy.h
src/ApplicationServer/Order/: Order.cpp  Order.h
src/ApplicationServer/RPC/: RPCCall.cpp  RPCCall.h  RPCServer.cpp  RPCServer.h
src/ApplicationServer/RestServer/: RequestInterpreter.cpp  RequestInterpreter.h  RespondGenerator.cpp  RespondGenerator.h  RestHandler.cpp  RestHandler.h
src/ApplicationServer/Thread/: ThreadBase.cpp  ThreadBase.hpp  ThreadPool.cpp  ThreadPool.hpp
src/ApplicationServer/Token/: Token.cpp  (+1 more)
src/RestHandler/: CMakeLists.txt  app.py
test/: ConfigParseTest.cpp  FactoryTest.cpp  ManagerTest.cpp  OrderProcess.cpp  OrderProcessTest.cpp  OrderTest.cpp
test/RestfulPostgres/: app.py
test/postman/: QuickRepair.postman_collection.json  QuickRepairEnv.postman_environment.json
(+32 files in other folders)
